--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
     - name: Validate output files
       run: |
         # Compute checksums for the generated files
-        sha256sum results/samples/sample_01/trimmed_reads/sample_01.trimmed.fastq.gz > generated_checksums.txt
-        sha256sum test_files/sample_01.trimmed.fastq.gz >> generated_checksums.txt
-        
-        # Compare to expected checksums
-        diff generated_checksums.txt expected_checksums.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_1.trimmed.fastq.gz > generated_checksums.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_2.trimmed.fastq.gz > generated_checksums.txt
+        sha256sum results/samples/demo_ont_1/trimmed_reads/nano_demo_ont_1.trimmed.fastq.gz > generated_checksums.txt
+        diff generated_checksums.txt .test_expected/expected_checksums.txt
