--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         mamba env create --name insaflu --file config/insaflu.yaml
         conda activate insaflu
-        mamba install -n insaflu -c conda-forge snakefmt
+        mamba install -n insaflu -c bioconda snakefmt
     
     - name: Lint with snakefmt
       shell: bash -l {0}
