--- a/config/max_memory.yaml
+++ b/config/max_memory.yaml
@@ -1,86 +1,86 @@
-freebayes: 500
-prepare_snpeff: 500
+freebayes: 5220
+prepare_snpeff: 306
 snpeff: 800
-snpeff_sample: 500
-getCoverage: 500
-mergeCoverage: 500
-makeproject: 500
-assemble_consensus: 500
-create_segments: 500
-trimme_reads_PE: 1500
-trimme_reads_SE: 1500
-fasttree: 4000
-fasttree_proteins: 500
-fasttree_nt: 4000
-cp_Alignment_nt_tree: 500
-translate: 500
+snpeff_sample: 2220
+getCoverage: 1160
+mergeCoverage: 280
+makeproject: 680
+assemble_consensus: 920
+create_segments: 280
+trimme_reads_PE: 1136
+trimme_reads_SE: 1136
+fasttree: 10000
+fasttree_proteins: 10000
+fasttree_nt: 10000
+cp_Alignment_nt_tree: 460
+translate: 940
 medaka_consensus: 4620
-medaka_get_depth: 500
-medaka_split_depth: 500
-medaka_call_variants: 552
-medaka_annotate_variants: 590
-mask_between_top_and_50: 168
-bcf_consensus: 500
-create_align_file: 500
-msa_masker_medaka: 500
-get_masked_consensus_medaka: 500
-mask_regions_consensus_medaka: 500
-raw_nanostat: 500
-trimmed_nanostat: 500
-point abricate_pangolin: 500
-not_pangolin: 500
-pangolin: 1000
-seqret_all_nt: 200
-seqret_all_nt_only_90: 200
-seqret_all_consensus: 200
-alignment_nt_All_seqret: 200
-align_w_mafft_medaka: 500
-align_mafft_snippy: 500
-mafft_pre_aa: 4000
-mafft: 4000
-mafft_nt: 4000
-mafft_proteins: 3000
-snippy_pe: 5000
-snippy_se: 5000
-primers_bam: 500
-snippy_split_depth: 500
-create_align_file_snippy: 500
-msa_masker_snippy: 500
-get_masked_consensus_snippy: 500
-mask_regions_consensus_snippy: 500
-nanofilt_SE: 500
-raw_fastqc_se: 1000
-raw_fastqc_pe: 1000
-trimmed_fastqc_pe: 3000
-trimmed_fastqc_se: 3000
-iVar_align_pe: 3000
-iVar_align_se: 3000
-ivar_primers: 3000
-call_variant: 4000
-generate_consensus: 2000
-get_depth: 500
-iVar_depth_1_2: 500
-iVar_depth_step_2: 500
-create_align_file_iVar: 500
-align_mafft_iVar: 500
-msa_masker_iVar: 500
-get_masked_consensus_iVar: 500
-mask_regions_consensus_iVar: 500
-abricate_se: 500
-abricate_pe: 500
-abricate_ont: 500
-variant_validated: 500
-snpeff_concat: 500
-snpeff_concat_indels: 500
-proportions_iSNVs_graph: 500
-spades_se: 8000
-spades_pe: 8000
-get_vcf: 500
-snippy_unzip_depth: 500
-initiate_folder: 500
-seqret_alignment_aa_gene: 500
-alignment_nt_seg_mafft_seqret: 500
-alignment_nt_seg_seqret: 500
-alignment_nt_specific_seqret: 500
-cp_Alignment_nt: 500
-warning: 500
+medaka_get_depth: 720
+medaka_split_depth: 1100
+medaka_call_variants: 5520
+medaka_annotate_variants: 5900
+mask_between_top_and_50: 1680
+bcf_consensus: 740
+create_align_file: 740
+msa_masker_medaka: 1500
+get_masked_consensus_medaka: 740
+mask_regions_consensus_medaka: 760
+raw_nanostat: 3960
+trimmed_nanostat: 3700
+abricate_pangolin: 1140
+not_pangolin: 560
+pangolin: 834
+seqret_all_nt: 5000
+seqret_all_nt_only_90: 5000
+seqret_all_consensus: 5000
+alignment_nt_All_seqret: 5000
+align_w_mafft_medaka: 1420
+align_mafft_snippy: 1460
+mafft_pre_aa: 1858
+mafft: 1858
+mafft_nt: 1860
+mafft_proteins: 3480
+snippy_pe: 8000
+snippy_se: 3794
+primers_bam: 520
+snippy_split_depth: 1160
+create_align_file_snippy: 760
+msa_masker_snippy: 1720
+get_masked_consensus_snippy: 740
+mask_regions_consensus_snippy: 760
+nanofilt_SE: 1420
+raw_fastqc_se: 680
+raw_fastqc_pe: 680
+trimmed_fastqc_pe: 1264
+trimmed_fastqc_se: 1264
+iVar_align_pe: 1856
+iVar_align_se: 1856
+ivar_primers: 1656
+call_variant: 2642
+generate_consensus: 7320
+get_depth: 740
+iVar_depth_1_2: 2080
+iVar_depth_step_2: 1060
+create_align_file_iVar: 760
+align_mafft_iVar: 1460
+msa_masker_iVar: 1240
+get_masked_consensus_iVar: 740
+mask_regions_consensus_iVar: 820
+abricate_se: 1560
+abricate_pe: 1560
+abricate_ont: 1560
+variant_validated: 5000
+snpeff_concat: 260
+snpeff_concat_indels: 780
+proportions_iSNVs_graph: 240
+spades_se: 5468
+spades_pe: 5468
+get_vcf: 2000
+snippy_unzip_depth: 1000
+initiate_folder: 1000
+seqret_alignment_aa_gene: 1000
+alignment_nt_seg_mafft_seqret: 1000
+alignment_nt_seg_seqret: 1000
+alignment_nt_specific_seqret: 1000
+cp_Alignment_nt: 1000
+warning: 100
