--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -284,7 +284,7 @@ assert same_identifiers(
 ), "Reference fasta and genbank files do not have the same identifiers"
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 
-memory = read_yaml(user_metadata["memory"])
+memory = read_yaml(dic_directory["memory"])
 
 
 SEGMENTS = get_locus(REFERENCE_GB)
