--- a/slurm/config.yaml
+++ b/slurm/config.yaml
@@ -2,12 +2,14 @@ cluster:
   mkdir -p logs/{rule} &&
   sbatch
     --partition={resources.partition}
+    --qos={resources.qos}
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
     --job-name=smk-{rule}-{wildcards}
     --output=logs/{rule}/{rule}-{wildcards}-%j.out
 default-resources:
-  - partition=<name-of-default-partition>
+  - partition=<name>
+  - qos=<name>
   - mem_mb=1000
 restart-times: 3
 max-jobs-per-second: 10
@@ -20,3 +22,5 @@ rerun-incomplete: True
 printshellcmds: True
 scheduler: greedy
 use-conda: True
+
+
