--- a/user/project.yaml
+++ b/user/project.yaml
@@ -5,3 +5,4 @@ gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 abricate: False
 illumina_consensus: snippy
 primers: sars_cov_2_primers.bed
+primers_fasta: sars_cov_2_primers.fasta
