--- a/workflow/envs/ivar.yaml
+++ b/workflow/envs/ivar.yaml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - ivar=1.3.1
-  - samtools
-  - bwa
+  - ivar=1.4.2
+  - bedtools=2.31.0
+  - bwa=0.7.17
   - biopython =1.79
