iVar and coverage reworked

--- a/user/project.yaml
+++ b/user/project.yaml
@@ -1,8 +1,7 @@
 only_samples: False
-project_name: test_snippy
+project_name: test_project
 fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 abricate: False
-illumina_consensus: snippy
-primers: sars_cov_2_primers.bed
-primers_fasta: sars_cov_2_primers.fasta
+illumina_consensus: iVar
+primers_fasta: sars_cov_2_artic_4_1.fasta
