--- a/config/constants.yaml
+++ b/config/constants.yaml
@@ -1,11 +1,11 @@
 working: ../results/
 user_metadata: ../user_metadata/
-sample_yaml: ../user/project.yaml #sample
-sample_csv: ../user/samples.csv #csv
+sample_yaml: ../user/project.yaml
+sample_csv: ../user/sars_test.csv
 config_file: ../config/config.yaml
 memory: ../config/max_memory.yaml
 software_parameters: ../user/parameters.yaml
-get_coverage: ../workflow/software/getCoverage/getCoverage.py
+get_coverage: ../workflow/scripts/getCoverage.py
 references: ../user/references/
 rules: ../workflow/rules/
 envs: ../envs/
