removed old coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,17 +37,43 @@ jobs:
         conda activate insaflu
         snakefmt workflow/Snakefile workflow/rules
 
-    - name: Execute Snakemake
+    - name: Execute Snakemake Snippy
       shell: bash -l {0}
       run: |
         conda activate insaflu
         snakemake --cores 1 --use-conda
 
-    # New step to compare the generated files to expected outputs
-    - name: Validate output files
+        # New step to compare the generated files to expected outputs
+    - name: Validate output files snippy
       run: |
         # Compute checksums for the generated files
-        sha256sum results/samples/demo_ont_1/trimmed_reads/nano_demo_ont_1.trimmed.fastq.gz > generated_checksums.txt
-        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_1.trimmed.fastq.gz >> generated_checksums.txt
-        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_2.trimmed.fastq.gz >> generated_checksums.txt
-        diff generated_checksums.txt .test_expected/expected_checksums.txt
+        sha256sum results/samples/demo_ont_1/trimmed_reads/nano_demo_ont_1.trimmed.fastq.gz >> output_snippy.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_1.trimmed.fastq.gz >> output_snippy.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_2.trimmed.fastq.gz >> output_snippy.txt
+        sha256sum results/align_samples/demo_illumina_1/snippy/demo_illumina_1_consensus.fasta >> output_snippy.txt
+        sha256sum results/align_samples/demo_ont_1/medaka/demo_ont_1_consensus.fasta >> output_snippy.txt
+        sha256sum results/projects/snippy_project/main_result/Alignment_nt_All.fasta >> output_snippy.txt
+        sha256sum results/projects/snippy_project/main_result/coverage_translate.csv >> output_snippy.txt
+        diff output_snippy.txt .test_expected/expected_snippy.txt
+
+    - name: Execute Snakemake
+      shell: bash -l {0}
+      run: |
+        sed s/snippy/iVar/g user/project.yaml > user/project.yaml
+        conda activate insaflu
+        snakemake --cores 1 --use-conda
+
+    - name: Validate output files iVar
+      run: |
+        # Compute checksums for the generated files
+        sha256sum results/samples/demo_ont_1/trimmed_reads/nano_demo_ont_1.trimmed.fastq.gz >> output_ivar.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_1.trimmed.fastq.gz >> output_ivar.txt
+        sha256sum results/samples/demo_illumina_1/trimmed_reads/demo_illumina_1_2.trimmed.fastq.gz >> output_ivar.txt
+        sha256sum results/align_samples/demo_illumina_1/iVar/demo_illumina_1_consensus.fasta >> output_ivar.txt
+        sha256sum results/projects/iVar_project/main_result/coverage_translate.csv >> output_ivar.txt
+        sha256sum results/projects/iVar_project/main_result/Alignment_nt_All.fasta >> output_ivar.txt
+
+        diff output_ivar.txt .test_expected/expected_ivar.txt
+
+
+
