changed minor variants and translation step

--- a/user/project.yaml
+++ b/user/project.yaml
@@ -1,7 +1,7 @@
 only_samples: False
-project_name: iVar_project
-fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
-gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
+project_name: single_test
+fasta_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta
+gb_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.gbk
 abricate: False
 illumina_consensus: iVar
 primers_fasta: sars_cov_2_artic_4_1.fasta
