--- a/user/project.yaml
+++ b/user/project.yaml
@@ -3,5 +3,5 @@ project_name: single_test
 fasta_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.gbk
 abricate: False
-illumina_consensus: iVar
+illumina_consensus: snippy
 primers_fasta: sars_cov_2_artic_4_1.fasta
