--- a/user/project.yaml
+++ b/user/project.yaml
@@ -1,5 +1,5 @@
 only_samples: False
-project_name: single_test
+project_name: snippy_project
 fasta_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.gbk
 abricate: False
