add parameters to the output files

--- a/user/project.yaml
+++ b/user/project.yaml
@@ -4,4 +4,5 @@ fasta_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_Wuhan_Hu_1_MN908947.gbk
 abricate: False
 illumina_consensus: snippy
-primers_fasta: sars_cov_2_artic_4_1.fasta
+primers_fasta: null
+
