--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Execute Snakemake iVar SARS-CoV-2
       shell: bash -l {0}
       run: |
-        sed s/snippy/iVar/g user/project.yaml > user/project.yaml
+        sed s/project/project_i/g user/contants.yaml > user/constants.yaml
         conda activate insaflu
         snakemake --cores 1 --use-conda
 
@@ -79,7 +79,7 @@ jobs:
     - name: Execute Snakemake iVar Influenza
       shell: bash -l {0}
       run: |
-        sed s/project.yaml/influenza.yaml/g user/constants.yaml > user/constants.yaml
+        sed s/project_i.yaml/influenza.yaml/g user/constants.yaml > user/constants.yaml
         sed s/samples.csv/influenza.csv/g user/constants.yaml > user/constants.yaml
         conda activate insaflu
         snakemake --cores 1 --use-conda
